# ai-learning

./: .env.example  .gitignore  AGENTS.md  COURSEWARE_LOG.md  COURSEWARE_TEMPLATE.md  LEARNING_LOG.md  PROJECT_OPTIMIZATION_PLAN.md  README.md  pyproject.toml  requirements.txt  面试题库-RAG+Agent.md
.github/workflows/: ci.yml
common/: __init__.py  config.py  embedding.py  llm.py  pdf_reader.py  search.py  similarity.py  text_splitters.py
docs/superpowers/plans/: 2026-03-20-milestone-1-rag-pdf.md
docs/superpowers/specs/: 2026-03-19-milestone-1-rag-pdf-design.md
milestone-1/: README.md  milestone_rag_pdf.py
milestone-1/data/: README.md  rag_intro_zh.txt
scripts/: dev.py  generate_pdf.py
tests/: test_config.py  test_pdf_reader.py  test_text_splitters.py  test_week1_cosine_similarity.py
week1-embedding/: 01_embedding_basics.py  README.md
week2-chunking/: 02_chunking_and_models.py  README.md
week3-vector-db/: 03_vector_search.py  README.md
week4-rag-pipeline/: 04_basic_rag.py  README.md
week5-hybrid-search/: 05_hybrid_search.py  README.md
week6-reranking/: 06_reranking.py  README.md
