[project]
name = "ai-learning"
version = "0.1.0"
description = "面向 RAG 与 Agent 学习路线的实验仓库"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "requests",
    "PyMuPDF",
    "chromadb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-p",
    "no:cacheprovider",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"week2-chunking/02_chunking_and_models.py" = ["E501"]
"milestone-1/milestone_rag_pdf.py" = ["F401", "F841"]
